[package]
name = "cobalt-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
curl = "0.4.46"
reqwest = {version = "*", features = ["blocking", "json"]  }
serde_json = "*"
lazy_static = "*"
rand = "*"